# Simple-End-to-End-GitOps-with-Werf

./: README.md  finish.md  index.json  intro.md
Simple-End-to-End-GitOps-with-Werf/: finish.md  index.json
Simple-End-to-End-GitOps-with-Werf/assets/demo-app/: Cargo.toml  Dockerfile  k8s.yml  werf.yml
Simple-End-to-End-GitOps-with-Werf/assets/demo-app/.devcontainer/: devcontainer.json
Simple-End-to-End-GitOps-with-Werf/assets/demo-app/.helm/templates/: deployment.yml  service.yml
Simple-End-to-End-GitOps-with-Werf/assets/demo-app/src/: main.rs
Simple-End-to-End-GitOps-with-Werf/automation/: text.md
Simple-End-to-End-GitOps-with-Werf/changes/: text.md
Simple-End-to-End-GitOps-with-Werf/dismiss/: text.md  verify.sh
Simple-End-to-End-GitOps-with-Werf/envvalues/: text.md
Simple-End-to-End-GitOps-with-Werf/gitinit/: text.md
Simple-End-to-End-GitOps-with-Werf/helm/: text.md
Simple-End-to-End-GitOps-with-Werf/install/: text.md
Simple-End-to-End-GitOps-with-Werf/intro/: foreground.sh  intro.md  verify.sh
Simple-End-to-End-GitOps-with-Werf/run/: text.md
Simple-End-to-End-GitOps-with-Werf/step1/: text.md  verify.sh
Simple-End-to-End-GitOps-with-Werf/step2/: text.md
assets/demo-app/: Dockerfile
assets/demo-app/src/: templates.rs
step1/: text.md  verify.sh
